# mayos-repoData

./: .editorconfig  .gitattributes  .gitignore  .prettierrc.json  .prettierrc.toml  .vscodeignore  CODE_OF_CONDUCT.md  Dockerfile  FILES.txt  README.md  full-FILES.txt  mos1.code-workspace  open.bat  open.sh  package.json  test.json5
repos/: src.src
repos/mayos-compiler/: CMakeLists.txt
repos/mayos-compiler/source/: compiler.cpp  compiler.hpp
repos/mayos-syntaxhl/: .vscodeignore  CHANGELOG.md  aeasm.language-configuration.json  aeini.language-configuration.json  aess.language-configuration.json  package.json
repos/mayos-syntaxhl/scrtest/: index.aes
repos/mayos-syntaxhl/syntaxes/: aes.tmLanguage.json
repos/mayos-testasm/: .vscodeignore  README.md  TODO.md  asmTool.bat
repos/pps2/: sufpkg.jsonc
src/mayos/config/: mayos.ini  mayos.xml
src/mayos/os/0.0.1.0_SNAPSHOT+00101020/etc/opt/: mayAI_config.xml
src/mayos/os/0.0.1.0_SNAPSHOT+00101020/etc/opt.1/com.example.package/: note.txt
src/mayos/os/0.0.1.0_SNAPSHOT+00101020/mayid/0001/: settings.json
src/mayos/os/0.0.1.0_SNAPSHOT+00101020/opt/com.mayos.lib.mayAI/: cloud.aeconf  index.aess
src/mayos/os/0.0.1.0_SNAPSHOT+00101020/sys/: changelog.txt  mayos.rct  system_ja-jp.may-msgtables
src/mayos/os/0.0.1.0_SNAPSHOT+00101020/sys/_apps/mayos.application_template/: index.mea  (+1 more)
src/mayos/os/0.0.1.2_SNAPSHOT+00121121/: mayos-beta.code-workspace
src/mayos/os/0.0.1.2_SNAPSHOT+00121121/dev/: .default
src/mayos/os/0.0.1.2_SNAPSHOT+00121121/sys/: maypack.aess  systemConf.json5  system_ja-jp.may-msgtables
(+1 files in other folders)
